# logging-extras

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: BUG.md  FEATURE.md  IMPROVE.md  QUESTION.md  config.yml
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  index.rst  logging_.config.rst  logging_.handlers.rst
docs/snippets/: logging.yaml
docs/snippets/queue_listener_handler/: logging.yaml  test_logger.py
docs/snippets/yaml_config/: common-handlers.yaml  logging-include.yaml  logging.yaml  test_logger.py  test_logger_include.py
logging_/: __init__.py
logging_/config/: __init__.py  yaml_config.py
logging_/handlers/: __init__.py  queue_listener_handler.py
tests/: test_logger.py  test_logging.py
tests/test_config/: test_yaml_config.py
tests/test_handlers/: test_queue_listener_handler.py
