[metadata]
license_files = LICENSE

[tool:pytest]
norecursedirs = docs dist

[options]
python_requires = >=3.8
install_requires =
    PyYAML>=5.3; python_version < "3.10"
    PyYAML>=6.0; python_version >= "3.10"

[options.extras_require]
test =
    pyfakefs
    pytest
    pytest-cov
dev =
    pyfakefs
    pytest
    pytest-cov
    tox
doc =
    sphinx
    sphinx-rtd-theme
